straga-cluster/argocd-apps-configuration/tailscale/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api-ingress
  namespace: minio
  annotations:
    tailscale.com/tls-cert-name: "minio-api-cert"
    traefik.ingress.kubernetes.io/client-body-buffer-size: "2G"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - s3.philippmhauptmann.me
      secretName: minio-api-cert
  rules:
    - host: s3.philippmhauptmann.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: minio
  annotations:
    tailscale.com/tls-cert-name: "minio-cert"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - minio.philippmhauptmann.me
      secretName: minio-cert
  rules:
    - host: minio.philippmhauptmann.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9090
